--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -18,7 +18,7 @@ jobs:
       
       - name: Push to Hugging Face
         env:
-          HF_TOKEN: ${{ secrets.72024896 }}
+          HF_TOKEN: ${{ secrets['72024896'] }}
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
