--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,9 +1,11 @@
 name: Sync to Hugging Face
+
 on:
   push:
     branches:
       - main
   workflow_dispatch:
+
 jobs:
   sync:
     runs-on: ubuntu-latest
@@ -33,14 +35,30 @@ jobs:
           BACKUP_DIR="Previous/backup_$TIMESTAMP"
           
           # Copy current files to backup (excluding .git and Previous folder)
-          mkdir -p "$BACKUP_DIR"
-          find . -maxdepth 1 -not -name '.' -not -name '..' -not -name '.git' -not -name 'Previous' -exec cp -r {} "$BACKUP_DIR"/ \;
+          if [ "$(ls -A . | grep -v '^\.git$' | grep -v '^Previous$')" ]; then
+            mkdir -p "$BACKUP_DIR"
+            for item in *; do
+              if [ "$item" != "Previous" ] && [ "$item" != ".git" ]; then
+                cp -r "$item" "$BACKUP_DIR/" 2>/dev/null || true
+              fi
+            done
+          fi
           
           # Remove old files (except .git and Previous folder)
-          find . -maxdepth 1 -not -name '.' -not -name '..' -not -name '.git' -not -name 'Previous' -exec rm -rf {} \;
+          for item in *; do
+            if [ "$item" != "Previous" ] && [ "$item" != ".git" ]; then
+              rm -rf "$item"
+            fi
+          done
           
-          # Copy new files from GitHub
-          cp -r ../!(hf_repo) .
+          # Copy new files from GitHub (from parent directory, excluding hf_repo)
+          cd ..
+          for item in *; do
+            if [ "$item" != "hf_repo" ] && [ "$item" != ".git" ]; then
+              cp -r "$item" hf_repo/ 2>/dev/null || true
+            fi
+          done
+          cd hf_repo
           
           # Commit and push changes
           git add .
