--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 title: VIGIL Risk Intelligence
-description: Enterprise Risk Intelligence with Dual-Source Synthesis
+description: Enterprise Risk Intelligence with Three Schema Strategies (Structured/Semi-Structured/Unstructured) and Dual-Source Analysis (Claude AI + Grok Intelligence)
 sdk: docker
 pinned: false
 tags:
@@ -8,6 +8,20 @@ tags:
   - ai
   - transformers
   - supabase
+  - structured-data
+  - semi-structured-data
+  - unstructured-data
+  - schema-on-write
+  - schema-on-read
+  - hybrid-schema
+  - vigil-summary
+  - alerts
+  - dual-path-analysis
+  - claude-ai
+  - grok-intelligence
+  - distilbert
+  - pgvector
+  - semantic-search
 
 # Environment variables
 env:
@@ -17,6 +31,8 @@ env:
     description: Supabase project URL
   - name: SUPABASE_KEY
     description: Supabase anon key
+  - name: ANTHROPIC_API_KEY
+    description: Anthropic API key for Claude AI integration
   - name: FLASK_ENV
     default: production
 
@@ -36,4 +52,3 @@ hardware:
 healthcheck:
   enabled: true
   endpoint: /api/health
-  
