--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,10 @@ sentence-transformers==2.2.2
 numpy==1.24.3
 scipy==1.11.2
 
+# AI Model SDKs
+anthropic==0.28.1
+xai-sdk==0.1.0
+
 # Database
 supabase==2.0.3
 python-dotenv==1.0.0
